syntax = "proto3";

option java_package = "io.mityukov.geo.tracking.core.data.repository.settings.app.proto";
option java_multiple_files = true;

message ProtoLocalAppSettings {
  bool showOnboarding = 1;
  int32 geolocationUpdatesRateSeconds = 2;
}